# dense_vision_client

./: CMakeLists.txt  LICENSE  README.md  dense_vision_client_nodelet_plugin.xml  package.xml
config/: dense_vision_client.yaml  kinect_dense_vision_client.yaml
include/dense_vision_client/: DenseVisionClient.h
launch/: dense_vision_client.launch  dense_vision_client_nodelet.launch  kinect_dense_vision_client.launch  kinect_dv_client.launch
src/: DenseVisionClient.cpp  dense_vision_client_node.cpp  dense_vision_client_nodelet.cpp
